Fixed animation jumps.

--- a/src/popup/style/_toggle.less
+++ b/src/popup/style/_toggle.less
@@ -18,6 +18,7 @@
         line-height: @size-control-inner;
         text-align: center;
         transition: background-color @time-slow;
+        white-space: nowrap;
         width: 50%;
         z-index: 1;
 
