--- a/src/popup/style/_up_down.less
+++ b/src/popup/style/_up_down.less
@@ -74,6 +74,7 @@
 
 .TrackBar {
     border: @size-border solid @color-border;
+    overflow: hidden;
     position: relative;
     width: 100%;
 
@@ -94,6 +95,7 @@
         position: absolute;
         text-align: center;
         top: 0;
+        white-space: nowrap;
         width: 100%;
         z-index: 2;
     }
