--- a/src/popup/style/style.less
+++ b/src/popup/style/style.less
@@ -82,6 +82,10 @@ html {
 
 #topSection {
     margin-top: @size-indent-big;
+    
+    .status {
+        white-space: pre-line;
+    }
 }
 
 #appDescription {
@@ -251,6 +255,10 @@ html {
 // Display site list splitted with toggle button
 .siteListParent {
     margin-top: 0 !important;
+    
+    .description {
+        white-space: nowrap !important;
+    }
 }
 
 .SiteList {
